# ZorkGPT

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CRITIC_ANALYSIS_REPORT.md  CRITIC_DISABLE_IMPLEMENTATION.md  Dockerfile.game_server  KNOWLEDGE_UPDATE_FIX_SUMMARY.md  LICENSE  PHASE3_SUMMARY.md  README.md  agent.md  analyze_critic.py  analyze_critic_cost.py  autosave_leak_fix_documentation.md  config.py  critic.md  demo_refactored_system.py  docker-compose.yml  enhanced_extractor.md  enhanced_map_graph.py  episode.jsonl  example_episode.txt  extractor.md  game_server.py  game_server_client.py  generate_episode_index.py  hybrid_zork_extractor.py  integrated_knowledge_system.py  integrated_knowledge_update.py  knowledge_extractor.py  knowledge_summarizer.py  llm_client.py  log_tools.py  logger.py  loop_analysis_report.md  loop_break.md  main.py  map_graph.py  mcp_config.example.json  (+33 more)
.claude/: settings.local.json
.claude/commands/: execute-task.md
.cursor/rules/: development-guidelines.mdc  zorkgpt-overview.mdc
.kiro/specs/mcp-integration/: design.md  requirements.md  tasks.md
benchmarks/: README.md  __init__.py  comparison_report.py  performance_metrics.py
docs/: ZORK_I_COMPLETE_GUIDE.md  code_review_fixes_7.1.md  critic_multiobject_fix.md  jericho_architecture.md  langfuse_integration_complete.md  langfuse_integration_final_summary.md  langfuse_integration_status.md  langfuse_phase2_implementation.md  langfuse_phase5_usage_tracking.md  langfuse_phase6_testing.md  phase5_1_implementation_summary.md  phase5_subphase3_summary.md  phase7_5_cleanup_report.md  testing_guide.md
game_files/: CLAUDE.md
game_interface/: CLAUDE.md  README.md  __init__.py
game_interface/client/: __init__.py  game_server_client.py
game_interface/core/: __init__.py  jericho_interface.py  structured_parser.py  zork_interface.py
game_interface/server/: __init__.py  game_server.py  models.py  session_manager.py
ideas/: Ephemeral_mem.md  ObjectiveManager.md  agent_objective.md  loop_break.md  mcp_spec.md  mem0.md  mem0_critic.md  memory-refactor.md  objective_progress.md  qzl_memory.md  refactor.md  semantic_deduplication_spec.md  simple_memory.md  thinking.md  zep-integration.md
infrastructure/: .gitignore  README.md  app.py  cdk.json  cw_config.json  deploy.py  episode_index_lambda.py  manage_ec2.py  monitor.py  requirements.txt  update_monitoring.sh  update_zorkgpt.sh  zorkgpt_viewer_stack.py
infrastructure/lambda/: list_episodes.py
knowledge/: CLAUDE.md  __init__.py  adaptive_manager.py  cross_episode_synthesis.py  knowledge_condensation.py  knowledge_generation.py  quality_assessment.py  section_utils.py  turn_extraction.py
managers/: CLAUDE.md  __init__.py  base_manager.py  context_manager.py  episode_synthesizer.py  knowledge_manager.py  map_manager.py  mcp_config.py  mcp_manager.py  objective_manager.py  rejection_manager.py  simple_memory_manager.py  state_manager.py
managers/memory/: __init__.py  cache_manager.py  file_operations.py  formatting.py  models.py  synthesis.py  triggers.py
orchestration/: __init__.py  zork_orchestrator_v2.py
scripts/: migrate_persistent_wisdom.py
session/: __init__.py  game_configuration.py  game_state.py
tests/: CLAUDE.md  README.md  __init__.py  conftest.py  test_agent_async_generation.py  test_agent_mcp_prompt_injection.py  test_agent_objectives.py  test_agent_session_cleanup.py  test_agent_sync_wrapper.py  test_agent_tool_calling_loop.py  test_cache_combining.py  test_combat_detection.py  test_combat_scenario.py  test_conftest_langfuse_disable.py  test_critic_enable_flag.py  test_critic_multiobject.py  test_critic_valid_exits.py  test_cross_episode_synthesis_integration.py  test_ephemeral_cache.py  test_episode_lifecycle_integration.py  test_exploration_guidance.py  test_game_configuration.py  test_game_over_detection.py  test_game_state_location_ids.py  test_integration.py  test_inventory_parsing.py  test_inventory_skip.py  test_inventory_sync_fix.py  test_jericho_exits_completeness.py  test_jericho_interface.py  test_jericho_interface_session_methods.py  test_jericho_relative_paths.py  test_jericho_session_integration.py  test_knowledge_update.py  test_langfuse_integration.py  test_langfuse_usage_extraction.py  test_llm_client_diagnostics.py  test_llm_client_empty_response.py  test_llm_client_reasoning_models.py  test_llm_client_tools.py  (+45 more)
tests/fixtures/: __init__.py  walkthrough.py
tests/simple_memory/: __init__.py  conftest.py  test_duplicate_rejection.py  test_ephemeral_cache.py  test_memory_routing.py  test_movement_memory_location.py  test_persistence_markers.py  test_phase3_public_invalidation_api.py  test_phase4_llm_integration.py  test_simple_memory_file_operations.py  test_simple_memory_formatting.py  test_simple_memory_parsing.py  test_simple_memory_status.py  test_simple_memory_synthesis.py  test_simple_memory_triggers.py  test_supersede_cache_migration.py  test_supersede_validation.py  test_synthesis_hallucination.py  test_validation_mutual_exclusivity.py
utils/: __init__.py  llm_utils.py
